--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.1.1
+  http: ^1.1.0
+  shared_preferences: ^2.2.2
+  hexcolor: ^3.0.1
+  font_awesome_flutter: ^10.7.0
+  otp_text_field: ^1.1.3
+  accordion: ^2.6.0
+  google_fonts: ^6.1.0
+  flutter_svg: ^2.0.10+1
+  line_awesome_flutter: ^2.0.0
+  flutter_screenutil: ^5.9.0
+  intl: ^0.19.0
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
